# AssemblyEnv

./: .gitignore  .polyscope.ini  CMakeLists.txt  LICENSE  imgui.ini  requirements.txt  setup.py  setup_cmake_utils.py
data/block/: gabriel.pts  lego.3dm  lego.objbak
data/block/seq/: dome_0703origin  dome_0703start1  dome_0703start2  dome_0703start3  dome_0903shortee  jinwen_0603  jinwen_0703
data/dataset/: lego.json  planar.gh
data/robots/irb2600/: ikfast_robot.cpp  irb2600.urdf  pyikfast.cpp  setup.py
ext/: CMakeLists.txt
logs/arch/summary/: events.out.tfevents.1715952610.ziqwang-epfl.558579.0
logs/dome_gnn/summary/: events.out.tfevents.1715956191.ziqwang-epfl.574264.0  events.out.tfevents.1715956764.ziqwang-epfl.576672.0
logs/stack/summary/: events.out.tfevents.1715946146.tsf-508-wpa-4-112.epfl.ch.55993.0  events.out.tfevents.1715946153.tsf-508-wpa-4-112.epfl.ch.55996.0  events.out.tfevents.1715946241.tsf-508-wpa-4-112.epfl.ch.56151.0
python/: librigid_block.dylib  libutil.dylib
python/AssemblyEnv/: .polyscope.ini  __version__.py  env.py  geometry.py
python/AssemblyEnv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/AssemblyEnv/reinforce/: env.py  playground.py  plot_policy.py  policy.py  test.py  train.py
python/AssemblyEnv/sac/: model.py
python/envs/: .polyscope.ini  grid_world.py  imgui.ini
python/py_rigidblock/: .polyscope.ini  __init__.py  assembly_env.py  geometry.py  imgui.ini  plot_policy.py  run.py
python/py_rigidblock.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rhino/: export(1).gh  export.3dm  export.gh
script/: .polyscope.ini  debug.py  evaluate.py  evaluate_policy.py  graph.py  imgui.ini  plot_policy.py  random_policy.py  run.py  train.py  train_policy.py  train_policy_sac.py  vis.py  vis_assembly.py  vis_policy.py  vis_policy_sac.py
script/logs/DQN_1/: events.out.tfevents.1713600840.ziqwang-epfl.18649.1  events.out.tfevents.1713600884.ziqwang-epfl.18649.4  events.out.tfevents.1713601069.ziqwang-epfl.18649.11  events.out.tfevents.1713601094.ziqwang-epfl.18649.12  events.out.tfevents.1713601120.ziqwang-epfl.18649.13  events.out.tfevents.1713601146.ziqwang-epfl.18649.14  events.out.tfevents.1713601172.ziqwang-epfl.18649.15  events.out.tfevents.1713601225.ziqwang-epfl.18649.17  events.out.tfevents.1713601252.ziqwang-epfl.18649.18  events.out.tfevents.1713601279.ziqwang-epfl.18649.19  events.out.tfevents.1713601385.ziqwang-epfl.18649.23  events.out.tfevents.1713601411.ziqwang-epfl.18649.24  (+37 more)
src/apps/: CMakeLists.txt
src/apps/pyRigidBlock/: CMakeLists.txt
src/apps/pyRigidBlock/src/: pyRigidBlock.cpp
src/libs/: CMakeLists.txt
(+1355 files in other folders)
